Change overflow of register form to avoid having scroll bars

--- a/app/grandchallenge/core/static/css/core.css
+++ b/app/grandchallenge/core/static/css/core.css
@@ -242,3 +242,9 @@ a[aria-expanded="false"] .fa-chevron-down {
 .htmx-request.htmx-indicator {
     display: inline-block;
 }
+
+/* hide register form scroll bar due to the honeypot field*/
+div.overflow-auto form[action="/accounts/signup/"] {
+    position: relative;
+    overflow: hidden;
+}
